samples/_failures_safe/1761606118_7b6a0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_739686e3.c: In function ‘main’:
./samples/SAFE/__tmp_739686e3.c:145:9: error: expected declaration or statement at end of input
  145 |         printf("Error reading choice\n");
      |         ^~~~~~
./samples/SAFE/__tmp_739686e3.c:145:9: error: expected declaration or statement at end of input
